# conduit

./: .gitignore  README.md
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/components/: Charts.tsx  TestConfig.tsx
dashboard/src/hooks/: useMetricsStream.ts
dashboard/src/types/: metrics.ts
docker/: docker-compose.yaml
dummy-backends/backend1/: index.html
dummy-backends/backend2/: index.html
dummy-backends/backend3/: index.html
load-balancer/: CMakeLists.txt  config.example.yaml  config.yaml
load-balancer/include/: thread_pool.hpp
load-balancer/src/: main.cpp  thread_pool.cpp
load-tester/: agent.go  go.mod  main.go
results/phase3/: c1.txt  c10.txt  c100.txt  c200.txt  c50.txt
results/phase4/: c1.txt  c10.txt  c100.txt  c1000.txt  c200.txt  c50.txt  c500.txt
